--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-awesome-button": "^6.5.1",
+    "react-datasheet": "^1.4.9",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spreadsheet": "^0.5.14",
+    "styled-components": "^5.3.1",
+    "styled-reset": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
